# P2P-chat-app

chat-app/: app.json
chat-app/app/: _layout.tsx
chat-app/app/(tabs)/: index.tsx
doc/: how_to_run.md
meshenger/application/: build.gradle
meshenger/backend/application/: build.gradle
meshenger/backend/ble/: build.gradle
meshenger/backend/network/: build.gradle
meshenger/backend/session/: build.gradle
meshenger/frontend/: app.json  package-lock.json  package.json
meshenger/frontend/android/: .gitignore  settings.gradle
meshenger/frontend/android/app/: build.gradle
meshenger/frontend/app/: index.tsx
meshenger/frontend/app/Onboarding/: index.tsx
meshenger/frontend/app/Onboarding/component/: MenuDot.tsx  (+4 more)
meshenger/network/: build.gradle
meshenger/session/: build.gradle
meshenger/session/src/main/cpp/: CMakeLists.txt  HelloWorld.cpp
meshenger/transport/: build.gradle
react-ui/: package-lock.json  package.json
react-ui/app/onboarding/: Onboarding1.tsx
report/: main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.lof  main.lot  main.out  main.run.xml  main.tex  main.toc  newrefs.bib  texput.fls
report/Sections/: chap10_conclusion.tex  chap1_introduction.tex  chap2_background_knowledge.tex  chap3_technology_stack.tex  chap4_related_work.tex  chap5_requirements_elicitation.tex  chap6_system_analysis.tex  chap7_system_design.tex  chap8_system_implementation.tex  chap9_system_evaluation.tex
report/section/: background_knowledge.tex  introduction.tex  requirements_elicitation.tex  system_analysis.tex  technology_stack.tex
(+12 files in other folders)
